--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap');
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: Montserrat, "Open Sans", Arial, Helvetica, sans-serif;
+  font-family: 'Be Vietnam Pro', sans-serif;
   margin: 0;
 }
 
-title {
-  font-family: sans-serif;
+title { 
   color: #005596;
 }
 
 h1 {
-  font-family: sans-serif;
+  
   color: #005596;
 }
 
 h2 {
-  font-family: sans-serif;
+  
 }
 
 h6 {
   font-size: 9px;
-  font-family: sans-serif;
+ 
 }
 
 p {
-  font-family: sans-serif;
+  
 }
 
 .logo-img {
@@ -121,6 +121,14 @@ img {
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
+}
+
+.information{
+  display: flex;
+  flex-direction: column;
+  padding: 0%, 20%;
+  background-color: aqua;
+
 }
 
 @keyframes fade {
