--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,8 @@ footer div h5 {
 }
 
 .sidebar a:hover {
-  color: #f8f8f2;
+  color: #005596;
+  background-color: #f8f8f2;
 }
 
 .sidebar .closebtn {
@@ -239,6 +240,69 @@ footer div h5 {
 }
 
 /* FIXME MODAL LOGIN BOX */
+
+/*set the Modal background*/
+/* FONDO MODAL LOGIN BOX */
+.modal {
+  display: flex;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  /* overflow: auto; */
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 0 4rem;
+}
+
+/*style the model content box*/
+.modal-content {
+  background-color: #d9d9d9;
+  margin: 5% auto 15% auto;
+  border: 1px solid #888;
+  width: 50%;
+  /* min-width: 105%; */
+}
+
+/*style the close button*/
+.modal-close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #005596;
+  font-size: 10rem;
+  font-weight: bold;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  color: #282a36;
+  cursor: pointer;
+}
+
+/*set padding to the container*/
+/* .modal {
+  display: flex;
+  padding: 15rem;
+} */
+
+.modal-container {
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* margin: 3rem; */
+  /* display: flex; */
+  /* flex-direction: column; */
+  padding: 3rem;
+}
+
+.modal-container-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 /*set border to the form*/
 /* OPCIONAL */
 /* form {
@@ -251,13 +315,13 @@ input[type="password"] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
-  display: inline-block;
+  display: flex;
   border: 1px solid #ccc;
   box-sizing: border-box;
 }
 /*set a style for the buttons*/
 /* BOTON MODAL LOGIN */
-.sidebar button {
+.sidebar .modal-login {
   background-color: #f8f8f2;
   color: #005596;
   padding: 1rem 2rem;
@@ -269,90 +333,80 @@ input[type="password"] {
 }
 /* set a hover effect for the button*/
 .modal-login {
-  width: 100%;
-  margin: 0rem 1rem;
-  color: #005596;
+  /* width: 100%; */
+  /* margin: 0rem 1rem; */
+  /* color: #005596; */
 }
 
 button:hover {
   /*FIXME ALL BUTTONS HOVER*/
   opacity: 0.8;
+  text-decoration: underline;
 }
+
 /*set extra style for the cancel button*/
 /* BOTON CANCELAR LOGIN */
-.modal-cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #282a36;
-  color: #f8f8f2;
+.modal-container-button button {
+  /* width: auto; */
+  /* margin: 1rem 1rem; */
+  /* padding: 10px 18px; */
+  background-color: #d9d9d9;
+  /* background-color: none; */
+  border: none;
+  border-radius: 0.5rem;
+  padding: 1rem 3rem;
+  color: #005596;
   font-weight: bold;
+}
+
+/* .modal-container-button button:hover {
+  background-color: #005596;
+  color: #f8f8f2;
+  text-decoration: underline;
+} */
+
+.modal-container-button .modal-confirmbtn {
+  background-color: #005596;
+  color: #f8f8f2;
+}
+.modal-container-button .modal-cancelbtn:hover {
+  /* background-color: #005596; */
+  color: #282a36;
 }
 /*centre the display image inside the container*/
 
-.modal-imgcontainer {
+/* FIXME BORRAR después. ya no tiene la imagen */
+/* .modal-imgcontainer {
   text-align: center;
   margin: 24px 0 12px 0;
   position: relative;
-}
+} */
 /*set image properties*/
-
+/* 
 img.modal-avatar {
   width: 10%;
   border-radius: 50%;
-}
-/*set padding to the container*/
+} */
 
-.modal-container {
-  padding: 16px;
-}
+/* FIXME END */
 
 /*set the forgot password text*/
 
-span.modal-psw {
-  float: center;
-  padding-top: 16px;
+.modal .modal-psw a {
+  display: flex;
+  /* float: center; */
+  color: #005596;
+  /* padding: 3rem; */
+  margin: 2rem 30%;
+  padding: 1rem;
+  justify-content: center;
+}
+
+.modal .modal-psw a:hover {
+  text-decoration: underline;
 }
 /*set styles for span and cancel button on small screens*/
 
-/*set the Modal background*/
-/* FONDO MODAL LOGIN BOX */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
-  padding-top: 60px;
-}
-
-/*style the model content box*/
-.modal-content {
-  background-color: #005596;
-  margin: 5% auto 15% auto;
-  border: 1px solid #888;
-  width: 80%;
-}
-
-/*style the close button*/
-.modal-close {
-  position: absolute;
-  right: 25px;
-  top: 0;
-  color: #f8f8f2;
-  font-size: 35px;
-  font-weight: bold;
-}
-
-.modal-close:hover,
-.modal-close:focus {
-  color: #282a36;
-  cursor: pointer;
-}
 /* add zoom animation*/
 .animate {
   -webkit-animation: animatezoom 0.6s;
