--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,12 @@ header {
 .logo-top {
   margin-top: 1rem;
 }
-.logo-img {
-  /* filter: invert(21%) sepia(94%) saturate(1334%) hue-rotate(184deg)
-    brightness(100%) contrast(102%); */
+
+/* .logo-img {
+
   filter: invert(99%) sepia(55%) saturate(884%) hue-rotate(302deg)
     brightness(119%) contrast(94%);
-}
+} */
 .search {
   display: flex;
 }
@@ -79,6 +79,7 @@ header {
 .information h2 {
   text-align: center;
 }
+
 .information p {
   text-align: justify;
 }
@@ -239,12 +240,23 @@ footer div h5 {
   cursor: pointer;
 }
 
-/* FIXME MODAL LOGIN BOX */
+/* FIXME Sidebar -> MODAL LOGIN BOX */
+/*set a style for the buttons*/
+/* BOTON INICIAR SESION SIDEBAR a MODAL BOX */
+.sidebar .modal-login {
+  background-color: #f8f8f2;
+  color: #005596;
+  padding: 1rem 2rem;
+  margin: 4rem 0rem;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  font-weight: bold;
+}
 
-/*set the Modal background*/
 /* FONDO MODAL LOGIN BOX */
 .modal {
-  display: flex;
+  flex-direction: column;
   position: fixed;
   z-index: 1;
   left: 0;
@@ -254,54 +266,56 @@ footer div h5 {
   /* overflow: auto; */
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
-  padding: 0 4rem;
+  /* padding: 0 4rem; */
+  /* margin: 1.5rem; */
+}
+
+/* set padding to the container*/
+.modal {
+  display: flex;
+  padding: 2rem;
+  /* margin: 10rem; */
+}
+
+.modal-container {
+  padding: 1.5rem;
+  /* margin: 1rem 1rem; */
+  /* width: 5%; */
 }
 
 /*style the model content box*/
-.modal-content {
+/* ESTILO MODAL BOX */
+.modal .modal-content {
   background-color: #d9d9d9;
   margin: 5% auto 15% auto;
   border: 1px solid #888;
-  width: 50%;
-  /* min-width: 105%; */
-}
-
-/*style the close button*/
-.modal-close {
-  position: absolute;
-  right: 25px;
-  top: 0;
-  color: #005596;
-  font-size: 10rem;
-  font-weight: bold;
-}
-
-.modal-close:hover,
-.modal-close:focus {
-  color: #282a36;
-  cursor: pointer;
-}
-
-/*set padding to the container*/
-/* .modal {
-  display: flex;
-  padding: 15rem;
-} */
-
-.modal-container {
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* margin: 3rem; */
-  /* display: flex; */
-  /* flex-direction: column; */
-  padding: 3rem;
+  min-width: 10rem;
+  width: 30%;
+  /* height: 30rem; */
 }
 
 .modal-container-button {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin: 0.5rem;
 }
+
+/* style the close button */
+/* .modal-close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #005596;
+  font-size: 10rem;
+  font-weight: bold;
+} */
+
+/* .modal-close:hover,
+.modal-close:focus {
+  color: #282a36;
+  cursor: pointer;
+} */
 
 /*set border to the form*/
 /* OPCIONAL */
@@ -319,18 +333,7 @@ input[type="password"] {
   border: 1px solid #ccc;
   box-sizing: border-box;
 }
-/*set a style for the buttons*/
-/* BOTON MODAL LOGIN */
-.sidebar .modal-login {
-  background-color: #f8f8f2;
-  color: #005596;
-  padding: 1rem 2rem;
-  margin: 4rem 0rem;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  font-weight: bold;
-}
+
 /* set a hover effect for the button*/
 .modal-login {
   /* width: 100%; */
@@ -346,16 +349,18 @@ button:hover {
 
 /*set extra style for the cancel button*/
 /* BOTON CANCELAR LOGIN */
-.modal-container-button button {
+#modal-id01 .modal-container-button button {
   /* width: auto; */
   /* margin: 1rem 1rem; */
-  /* padding: 10px 18px; */
   background-color: #d9d9d9;
   /* background-color: none; */
   border: none;
   border-radius: 0.5rem;
-  padding: 1rem 3rem;
+  /* justify-content: center; */
+  /* margin: 0.5rem; */
+  /* padding: 1rem 3rem; */
   color: #005596;
+  padding: 0.78rem 1rem;
   font-weight: bold;
 }
 
@@ -365,14 +370,17 @@ button:hover {
   text-decoration: underline;
 } */
 
-.modal-container-button .modal-confirmbtn {
+#modal-id01 .modal-container-button .modal-confirmbtn {
   background-color: #005596;
   color: #f8f8f2;
 }
+
 .modal-container-button .modal-cancelbtn:hover {
   /* background-color: #005596; */
+  /* border-style: dotted; */
   color: #282a36;
 }
+
 /*centre the display image inside the container*/
 
 /* FIXME BORRAR después. ya no tiene la imagen */
@@ -396,10 +404,8 @@ img.modal-avatar {
   display: flex;
   /* float: center; */
   color: #005596;
-  /* padding: 3rem; */
-  margin: 2rem 30%;
-  padding: 1rem;
   justify-content: center;
+  padding: 1rem;
 }
 
 .modal .modal-psw a:hover {
@@ -437,6 +443,7 @@ img.modal-avatar {
     float: none;
   }
   .modal-cancelbtn {
-    width: 100%;
+    /* FIXME  */
+    /* width: 100%; */
   }
 }
