--- a/css/style.css
+++ b/css/style.css
@@ -174,8 +174,10 @@ footer div h5 {
   text-decoration: none;
   font-size: 16px;
   color: #d9d9d9;
-  display: block;
+  display: flex;
   transition: 0.3s;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .sidebar a:hover {
@@ -189,6 +191,15 @@ footer div h5 {
   right: 25px;
   font-size: 24px;
   margin-left: 50px;
+  border-radius: 50%;
+}
+
+.sidebar img {
+  height: 3.75rem;
+}
+
+.sidebar .logo-img img {
+  height: 4rem;
 }
 
 .openbtn {
