--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,18 @@ body {
 }
 
 header {
+  position: fixed;
   margin-top: 0;
   display: flex;
-  /* flex-direction: row; */
+  width: 100%;
+  /* max-width: 100%; */
+  /* width: 100%; */
+  /* justify-content: flex-end; */
   justify-content: space-between;
   align-items: center;
   padding: 0.2rem 1rem;
-  /* background-color: gray; */
+  background-color: var(--white);
+  /* box-sizing: border-box; */
 }
 
 .container {
@@ -42,10 +47,14 @@ header {
   position: fixed;
   width: 20rem;
   height: 100%;
-  background: #005596;
-  border-left: 0.7rem solid #005596;
+  background: var(--blue);
+  border-left: 0.7rem solid var(--blue);
   transition: 0.5s;
   overflow: hidden;
+  margin-top: 3.6rem;
+}
+
+.container .sidebar .sidebar-content {
 }
 
 .sidebar.active {
@@ -74,6 +83,7 @@ header {
 .sidebar ul li:nth-child(1) {
   position: absolute;
   left: 14rem;
+  font-size: 25px;
 }
 .sidebar ul li:nth-child(2) {
   margin-bottom: 2.5rem;
