--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap');
+
 * {
   box-sizing: border-box;
 }
@@ -6,128 +7,135 @@
 body {
   font-family: 'Be Vietnam Pro', sans-serif;
   margin: 0;
-  
+
 }
 
-header{
+header {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   background-color: gray;
-  
+
 }
-.logo-top{
+
+.logo-top {
   margin-top: 0.5rem;
 }
+
 .logo-img {
   /* filter: invert(21%) sepia(94%) saturate(1334%) hue-rotate(184deg)
     brightness(100%) contrast(102%); */
-  filter: invert(99%) sepia(55%) saturate(884%) hue-rotate(302deg)
-    brightness(119%) contrast(94%);    
+  filter: invert(99%) sepia(55%) saturate(884%) hue-rotate(302deg) brightness(119%) contrast(94%);
 }
-.search{
+
+.search {
   display: flex;
 }
-.search form button{
+
+.search form button {
   border-radius: 5%;
   margin-left: 0.5rem;
 }
-.base-main{   
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  flex-flow: row wrap;
-}
 
 
 
 
-.imgs{
+
+.imgs {
   margin-top: 0.5rem;
   display: flex;
   width: 90%;
 }
 
-.galeria { 
-  
-  
+.galeria {
+
+
   display: flex;
   width: 100%;
-  
-  
+
+
 }
 
 .galeria img {
-  position: absolute;  
+  position: absolute;
   opacity: 0;
   transition: opacity 3s;
   width: 45%;
   margin-left: 5%;
   margin-top: 15%;
- 
+
 }
 
 .galeria input[type=radio] {
   position: sticky;
-  margin-top:50%;
+  margin-top: 50%;
   margin-left: 5rem;
-  
+
 }
 
-.galeria input[type=radio]:nth-of-type(1):checked ~ img:nth-of-type(1) {
-  opacity: 1;
-}
-
-.galeria input[type=radio]:nth-of-type(2):checked ~ img:nth-of-type(2) {
+.galeria input[type=radio]:nth-of-type(1):checked~img:nth-of-type(1) {
   opacity: 1;
 }
 
-.galeria input[type=radio]:nth-of-type(3):checked ~ img:nth-of-type(3) {
+.galeria input[type=radio]:nth-of-type(2):checked~img:nth-of-type(2) {
   opacity: 1;
 }
 
-.galeria input[type=radio]:nth-of-type(4):checked ~ img:nth-of-type(4) {
+.galeria input[type=radio]:nth-of-type(3):checked~img:nth-of-type(3) {
   opacity: 1;
 }
-.galeria input[type=radio]:nth-of-type(5):checked ~ img:nth-of-type(5) {
+
+.galeria input[type=radio]:nth-of-type(4):checked~img:nth-of-type(4) {
   opacity: 1;
 }
-.galeria input[type=radio]:nth-of-type(6):checked ~ img:nth-of-type(6) {
+
+.galeria input[type=radio]:nth-of-type(5):checked~img:nth-of-type(5) {
   opacity: 1;
 }
-.galeria input[type=radio]:nth-of-type(7):checked ~ img:nth-of-type(7) {
+
+.galeria input[type=radio]:nth-of-type(6):checked~img:nth-of-type(6) {
   opacity: 1;
 }
-.information{
+
+.galeria input[type=radio]:nth-of-type(7):checked~img:nth-of-type(7) {
+  opacity: 1;
+}
+
+.information {
   display: flex;
   flex-direction: column;
   margin-left: 1.5rem;
-  
-  
+
+
 }
-.information h2{  
+
+.information h2 {
   text-align: center;
 }
-.information p{
+
+.information p {
   text-align: justify;
 }
 
-.reserve{
+.reserve {
   display: flex;
-  flex-direction: column;  
+  flex-direction: column;
   justify-content: center;
   width: 100%;
 }
-.reserve h2{
+
+.reserve h2 {
   text-align: center;
 }
-.reserve form{  
+
+.reserve form {
   text-align: center;
   display: flex;
   justify-content: space-around;
   margin-left: 1rem;
 }
-.nav-footer{
+
+.nav-footer {
   list-style: none;
   display: flex;
   justify-content: center;
@@ -135,30 +143,36 @@ header{
   height: 4rem;
   color: #f8f8f2;
 }
-.nav-footer li{
+
+.nav-footer li {
   justify-content: center;
   margin-top: 1.5rem;
   margin-left: 1rem;
 }
-.social-media{
+
+.social-media {
   display: flex;
   text-align: center;
   justify-content: center;
-  
+
 }
-.social-media span{
+
+.social-media span {
   margin-left: 1rem;
 }
-.social-media span a i{
+
+.social-media span a i {
   color: #005596;
-  
+
 }
+
 .logo-footer {
   display: flex;
   justify-content: space-around;
   text-align: center;
 }
-footer div h5{
+
+footer div h5 {
   color: #005596;
   text-align: center;
 }
@@ -168,6 +182,7 @@ footer div h5{
   from {
     opacity: 0.4;
   }
+
   to {
     opacity: 1;
   }
@@ -175,6 +190,7 @@ footer div h5{
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
+
   .prev,
   .next,
   .text {
@@ -245,6 +261,7 @@ footer div h5{
   .sidebar {
     padding-top: 15px;
   }
+
   .sidebar a {
     font-size: 18px;
   }
