--- a/css/gestionAdministradores.css
+++ b/css/gestionAdministradores.css
@@ -1,16 +1,14 @@
-
-.dataUser{
-    margin-top: 3rem;
+.buscador {
+  margin-top: 9rem;
+  margin-left: 42%;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
+  height: 35px;
+  border-radius: 25px;
+  text-align: center;
 }
 
-.dataUser input:nth-child(1){
-    margin-left: 30%;
-    margin-bottom: 1rem;
-    width: 300px;
-    height: 35px;
-    border-radius: 25px;
-}
-.dataUser button{
+.btnBuscar {
   width: 11rem;
   height: 2rem;
   text-align: center;
@@ -20,43 +18,64 @@
   cursor: pointer;
 }
 
-.dataUser h2{
+.dataUser input:nth-child(1) {
+  margin-left: 30%;
+  margin-bottom: 1rem;
+  width: 300px;
+  height: 35px;
+  border-radius: 25px;
+}
+
+.dataUser button {
+  width: 11rem;
+  height: 2rem;
+  text-align: center;
+  border: none;
+  background-color: #005596;
+  color: #f2f2f2;
+  cursor: pointer;
+}
+
+.dataUser h2 {
   margin-left: 20%;
   margin-top: 2rem;
 }
 
-.inputs_dataUser{
-  margin-left:30%;
+.inputs_dataUser {
+  margin-left: 30%;
   padding: 1rem;
 }
 
-.inputs_dataUser label{
+.inputs_dataUser label {
   width: 12rem;
-  display:inline-block;
+  display: inline-block;
   margin-right: 1rem;
   margin-top: 1rem;
   font-weight: bold;
 }
-.inputs_dataUser input{
+
+.inputs_dataUser input {
   height: 2rem;
 }
 
-.inputs_dataUser input:nth-of-type(-n+3){
+.inputs_dataUser input:nth-of-type(-n+3) {
   width: 15rem;
-}
-.inputs_dataUser input:nth-of-type(+n+5){
-  width: 15rem;
-}
-select{
-    height: 2rem;
-    width: 15rem;
-    text-align: center;
 }
 
-.btnGuardar{
-    background-color: #005596;
-    color: #f2f2f2;
-    border: none;
+.inputs_dataUser input:nth-of-type(+n+5) {
+  width: 15rem;
+}
+
+select {
+  height: 2rem;
+  width: 15rem;
+  text-align: center;
+}
+
+.btnGuardar {
+  background-color: #005596;
+  color: #f2f2f2;
+  border: none;
   width: 6rem;
   height: 2.5rem;
   margin-left: 43%;
@@ -65,4 +84,3 @@ select{
   margin-top: 1.5rem;
   margin-bottom: 6rem;
 }
-
