--- a/css/gestionUsuarios.css
+++ b/css/gestionUsuarios.css
@@ -1,6 +1,21 @@
 
-.dataUser{
-    margin-top: 3rem;
+.buscador{
+  margin-top: 9rem;
+    margin-left: 42%;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+    height: 35px;
+    border-radius: 25px;
+    text-align: center;
+}
+.btnBuscar{
+  width: 11rem;
+  height: 2rem;
+  text-align: center;
+  border: none;
+  background-color: #005596;
+  color: #f2f2f2;
+  cursor: pointer;
 }
 
 .dataUser input:nth-child(1){
@@ -21,12 +36,13 @@
 }
 
 .dataUser h2{
-  margin-left: 20%;
+  margin-left: 10%;
   margin-top: 2rem;
+  margin-bottom:1rem;
 }
 
 .inputs_dataUser{
-  margin-left:30%;
+  margin-left:20%;
   padding: 1rem;
 }
 
@@ -63,11 +79,11 @@
 
 
 .reserves h2{
-    margin-left: 20%;
+    margin-left: 10%;
   }
   
   .reservesTable{
-    margin-left: 20%;
+    margin-left: 10%;
     border-collapse: separate;
     border: black 1px solid;
     background-color:lightgray;
@@ -88,7 +104,7 @@
     margin-top: 2rem;
   }
   .reserves input{
-    margin-left: 40%;
+    margin-left: 30%;
   }
 
   .reserves h4{
@@ -100,7 +116,7 @@
   
   /*Reviews Section*/
 .reviews{
-    margin-left: 20%;
+    margin-left: 10%;
     margin-bottom: 10rem;
   }
   .reviews h2{
