--- a/css/user.css
+++ b/css/user.css
@@ -1,11 +1,13 @@
 
+
 .dataUser h2{
-  margin-left: 20%;
-  margin-top: 2rem;
+  margin-left: 10%;
+  margin-top: 0;
+  padding-top: 10rem;
 }
 
 .inputs_dataUser{
-  margin-left:30%;
+  margin-left:20%;
   padding: 1rem;
 }
 .inputs_dataUser label{
@@ -32,7 +34,7 @@
   border: none;
   width: 6rem;
   height: 2.5rem;
-  margin-left: 43%;
+  margin-left: 33%;
   font-weight: bold;
   font-size: 1rem;
   margin-top: 1.5rem;
@@ -41,11 +43,11 @@
 
 .reserves h2{
   margin-top: 5rem;
-  margin-left: 20%;
+  margin-left: 10%;
 }
 
 .reservesTable{
-  margin-left: 20%;
+  margin-left: 10%;
   border-collapse: separate;
   border: black 1px solid;
   background-color:lightgray;
@@ -69,7 +71,7 @@
 
 /*Reviews Section*/
 .reviews{
-  margin-left: 20%;
+  margin-left: 10%;
   margin-bottom: 10rem;
 }
 .reviews h2{
