--- a/css/style.css
+++ b/css/style.css
@@ -77,12 +77,15 @@ header {
 .sidebar ul li.hovered {
   background: var(--white);
 }
-.sidebar ul li:nth-child(1) {
+/* .sidebar ul li:nth-child(1) {
   position: absolute;
   left: 14rem;
   font-size: 25px;
-}
-.sidebar ul li:nth-child(2) {
+} */
+
+/* Al quitar el boton de cerrar el siguiente estilo
+pasó de nth-child(2) a nth-child(1) */
+.sidebar ul li:nth-child(1) {
   margin-bottom: 2.5rem;
   pointer-events: none;
 }
